simple logit model: added explanation

--- a/NYU_Byran_PS1.ipynb
+++ b/NYU_Byran_PS1.ipynb
@@ -12,7 +12,7 @@
      "collapsed": false,
      "input": [
       "import pandas as pd\n",
-      "from pandas import DataFrame\n",
+      "from pandas import *\n",
       "import numpy as np\n",
       "from scipy.optimize import minimize\n",
       "pd.options.display.max_colwidth=500\n",
@@ -21,14 +21,27 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 66
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
       "df = pd.read_stata('/Users/Titanic/Dropbox/3Classes/Bryan/PS1/YogurtLong.dta')\n",
-      "df.head()"
+      "data = df.head().values\n",
+      "col = df.columns\n",
+      "bs = 'Branch Choice (B)'\n",
+      "ps = 'Prices (P)'\n",
+      "fs = 'Features (F)'\n",
+      "arrays = [['', '',    '',  \n",
+      "           bs,bs,bs,bs,bs,\n",
+      "           ps,ps,ps,ps,\n",
+      "           fs,fs,fs,fs,''],\n",
+      "          col]\n",
+      "tuples = list(zip(*arrays))\n",
+      "index = MultiIndex.from_tuples(tuples, names=['', 'ind'])\n",
+      "df_show = DataFrame(data, columns=index)\n",
+      "df_show"
      ],
      "language": "python",
      "metadata": {},
@@ -38,8 +51,16 @@
         "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
         "<table border=\"1\" class=\"dataframe\">\n",
         "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
+        "    <tr>\n",
         "      <th></th>\n",
+        "      <th colspan=\"3\" halign=\"left\"></th>\n",
+        "      <th colspan=\"5\" halign=\"left\">Branch Choice (B)</th>\n",
+        "      <th colspan=\"4\" halign=\"left\">Prices (P)</th>\n",
+        "      <th colspan=\"4\" halign=\"left\">Features (F)</th>\n",
+        "      <th></th>\n",
+        "    </tr>\n",
+        "    <tr>\n",
+        "      <th>ind</th>\n",
         "      <th>hh</th>\n",
         "      <th>qty</th>\n",
         "      <th>exp</th>\n",
@@ -166,25 +187,27 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 2,
+       "prompt_number": 69,
        "text": [
-        "   hh  qty    exp  nopurch  b1  b2  b3  b4    p1    p2    p3    p4  f1  f2  \\\n",
-        "0   1    2  40.90        0   0   0   0   1  0.11  0.08  0.06  0.08   0   0   \n",
-        "1   1    0   8.83        1   0   0   0   0  0.11  0.09  0.05  0.08   0   0   \n",
-        "2   1    0   3.88        1   0   0   0   0  0.13  0.09  0.05  0.08   0   0   \n",
-        "3   1    0   0.78        1   0   0   0   0  0.13  0.09  0.05  0.08   0   0   \n",
-        "4   1    0  39.24        1   0   0   0   0  0.13  0.09  0.05  0.08   0   0   \n",
+        "                     Branch Choice (B)                  Prices (P)        \\\n",
+        "ind  hh  qty    exp            nopurch  b1  b2  b3  b4          p1    p2   \n",
+        "0     1    2  40.90                  0   0   0   0   1        0.11  0.08   \n",
+        "1     1    0   8.83                  1   0   0   0   0        0.11  0.09   \n",
+        "2     1    0   3.88                  1   0   0   0   0        0.13  0.09   \n",
+        "3     1    0   0.78                  1   0   0   0   0        0.13  0.09   \n",
+        "4     1    0  39.24                  1   0   0   0   0        0.13  0.09   \n",
         "\n",
-        "   f3  f4  tripnum  \n",
-        "0   0   0        1  \n",
-        "1   0   0        2  \n",
-        "2   0   0        3  \n",
-        "3   0   0        4  \n",
-        "4   0   0        5  "
+        "                 Features (F)                       \n",
+        "ind    p3    p4            f1  f2  f3  f4  tripnum  \n",
+        "0    0.06  0.08             0   0   0   0        1  \n",
+        "1    0.05  0.08             0   0   0   0        2  \n",
+        "2    0.05  0.08             0   0   0   0        3  \n",
+        "3    0.05  0.08             0   0   0   0        4  \n",
+        "4    0.05  0.08             0   0   0   0        5  "
        ]
       }
      ],
-     "prompt_number": 2
+     "prompt_number": 69
     },
     {
      "cell_type": "code",
@@ -197,7 +220,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 70
     },
     {
      "cell_type": "code",
@@ -215,7 +238,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 46
+     "prompt_number": 71
     },
     {
      "cell_type": "code",
@@ -241,7 +264,7 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 64,
+       "prompt_number": 72,
        "text": [
         "  status: 0\n",
         "    nfev: 1852\n",
@@ -254,7 +277,15 @@
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": 72
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
