simple logit model: added explanation

--- a/NYU_Byran_PS1.ipynb
+++ b/NYU_Byran_PS1.ipynb
@@ -30,7 +30,7 @@
       "df = pd.read_stata('/Users/Titanic/Dropbox/3Classes/Bryan/PS1/YogurtLong.dta')\n",
       "data = df.head().values\n",
       "col = df.columns\n",
-      "bs = 'Branch Choice (B)'\n",
+      "bs = 'Brand Choice (B)'\n",
       "ps = 'Prices (P)'\n",
       "fs = 'Features (F)'\n",
       "arrays = [['', '',    '',  \n",
